tests/negative/gold/default_values3_test.gold
tests/negative/default_values3_test.toit:7:3: error: Argument mismatch for 'foo'
Block argument not provided
  foo
  ^~~
tests/negative/default_values3_test.toit:8:3: error: Argument mismatch for 'foo'
Method does not take any non-block arguments, but one was provided
  foo null
  ^~~
tests/negative/default_values3_test.toit:12:5: error: Block parameters may not have a default value.
foo [x]=(499):
    ^~
tests/negative/default_values3_test.toit:13:10: error: Can't return a block
  return x
         ^
Compilation failed.
